2014-07-19  Araki Ken  <arakiken@users.sf.net>

	* MLTermPty.c:
	  - "use_auto_detect" and "auto_detect_encodings" are supported.
	  - replaceTextBuffering(0,0,null,null) is called in checkTextLimit().

	* x_screen.c, doc/en/PROTOCOL: "auto_detect_encodings" is added to OSC 5380 and 5381.

	* ml_vt100_parser.[ch]:
	  - ml_get_auto_detect_encodings() is added.
	  - ISO8859_6_R (arabic) and ISO8859_8_R (hebrew) are always converted to
	    unicode because they need bidi rendering.

	* mc_io.[ch]: 'const' is added.

	* mc_auto_detect.[ch]: Added.

	* mc_check.[ch]: Removed.

	* ml_pty.c: Parenthesis is added.

2014-07-15  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: ml_line_is_empty() in start_selection() and selecting_with_motion()
	  is removed.

	* ml_screen.c: convert_col_to_char_index() is fixed.

2014-07-14  Araki Ken  <arakiken@users.sf.net>

	* x_display_wscons.c: The null pointer bug of_display.color_cache in the case
	  of vinfo.depth >= 2 && _disp.depth == 1 is fixed.

2014-07-13  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Compiling error is fixed.

	* ml_screen.c, x_screen.c:
	  ml_term_get_cols(screen->term) - line->num_of_chars
	  => ml_term_get_cols(screen->term) - ml_line_get_num_of_filled_cols(line)

	* x_selection.c: conved flag is added in update_sel_region() instead of
	  col != conved_col because it doesn't works if col == 0.

2014-07-13  Araki Ken  <arakiken@users.sf.net>

	* ml_screen.[ch], ml_term.h, x_screen.c, x_selection.[ch]:
	  Rectangle selection is supported.

	* win32/x_window.c: get_key_state() is set to XButtonEvent::state in
	  x_window_receive_event().

	* ml_line.c:
	  - ml_line_{reverse|restore}_color() calls ml_line_set_modified()
	    only if ml_char_{reverse|restore}_color() returns 1.
	  - BREAK_BOUNDARY works in ml_convert_char_index_to_col() works even if
	    specified line is empty.

	* ml_char.c: Minor fixes.

2014-07-10  Araki Ken  <arakiken@users.sf.net>
