@@ -1,5 +1,6 @@
 ver 3.3.8
 * Support rectangle selection by pressing alt key while selecting.
+* Support DECDMAC/DECINVM.
 * Add "Auto detect" entry to "Encoding" tab of mlconfig.
 * Read /dev/kbd on NetBSD/x68k framebuffer.
 * Bug fixes:
